mall adjustments the server and client infrastructure

--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mysql2-promise": "^0.1.4"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.0"
   }
 }
