--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mysql2-promise": "^0.1.4"
+    "mysql2": "^3.16.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^25.0.0"
