--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,8 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mysql2": "^3.16.0",
-    "zod": "^4.2.1"
+    "joi": "^18.0.2",
+    "mysql2": "^3.16.0"
   },
   "devDependencies": {
     "@types/node": "^25.0.0"
